--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +42,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.LoginPage {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
 }
