--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,83 @@
   justify-content: center;
   font-size: 3rem;
 }
+
+.App-skeleton-bg {
+  background-color: #1d2127;
+  width: 60vw;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 35px 50px 50px; /* Top Right Buttom Left */
+  left: 0;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.App-skeleton-bg1 {
+  background-color: #1d2127;
+  width: 15vw;
+  border: none;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  margin-top: 28px;
+  margin-left: 75em;
+  padding: 35px 0px 60px;
+  position: relative;
+  z-index: 2;
+}
+
+.App-skeleton-bga {
+  margin-top: 55px;
+  border: none;
+  display: inline;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  margin-left: 61em;
+  position: absolute;
+  z-index: 1;
+}
+
+.App-skeleton-bga:hover {
+  cursor: pointer;
+}
+
+.App-skeleton-bg2 {
+  border: none;
+  font-family: 'Poppins', sans-serif;
+  margin-left: 61em;
+  position: relative;
+  z-index: 3;
+}
+
+.App-skeleton-createpost {
+  color: #fff;
+  font-size: 50px;
+  margin-left: calc((100vw / 4) - 100px);
+}
+
+.App-skeleton-ground {
+  border: none;
+  background-color: #282c34;
+  height: calc(100vh - 56px);
+  padding-top: 50px;
+}
+
+.App-skeleton-textareadesc {
+  font-family: 'Poppins', sans-serif;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 20px;
+  overflow: hidden;
+  background-color: rgba(57, 63, 84, 0.8);
+  color: #BFD2FF;
+  font-size: 1.2rem;
+  height: 200px;
+  resize: none;
+  outline: none;
+}
