--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
 }
 
 .App-skeleton-textareadesc {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   border: none;
   border-radius: 5px;
   padding: 15px 20px;
