--- a/src/Webflow.scss
+++ b/src/Webflow.scss
@@ -13,8 +13,8 @@ $input-text-active: #BFD2FF;
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 400px;
-  height: 60px;
+  width: 25vw;
+  height: 55px;
   margin: 0;
   border-radius: 4px;
   padding: 0.4rem 1.3rem 0.6rem;
@@ -60,11 +60,10 @@ $input-text-active: #BFD2FF;
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 100px;
-    height: 50px;
-    margin: 0;
+    width: 8vw;
+    height: 45px;
     border-radius: 2px;
-    padding: 0.4rem 1.3rem 0.6rem;
+    padding: 0.1rem 0rem 0.3rem 0.9rem;
     background: $input-background;
     &:after {
       box-sizing: inherit;
