--- a/src/components/pages/css/UserDetails.css
+++ b/src/components/pages/css/UserDetails.css
@@ -1,4 +1,15 @@
+.container{
+    padding-top: 50px;
+    justify-content: center;
+}
+.MyEvent{
+    display: inline-block;
+    float: left;
+    padding-right: 50px;
+}
 .Card{
+    display: inline-block;
+    float: right;
     width: 350px;
     height: 470px;
     background: white;
@@ -6,6 +17,7 @@
     box-shadow: 0px 1px 10px 1px black;
 }
 .upper-container{
+    border-radius: 5px;
     height: 100px;
     background: linear-gradient(to left,#2d00f7,#ff0291);
 }
