--- a/src/components/pages/css/MainPage.css
+++ b/src/components/pages/css/MainPage.css
@@ -1,5 +1,13 @@
 .createEvents{
     text-align: center;
-    background-color: grey;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 1.5rem;
+    background-color: rgb(54, 124, 255);
     color: ivory;
+    transition: all 0.3s ease-in-out background-color;
+}
+.createEvents:hover{
+    background-color: rgb(91, 178, 255);
 }
