--- a/src/components/pages/css/UserDetails.css
+++ b/src/components/pages/css/UserDetails.css
@@ -7,6 +7,8 @@
 }
 .upper-container{
     height: 100px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     background: linear-gradient(to left,#2d00f7,#ff0291);
 }
 .image-container img{
