--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@
 .App-skeleton-ground {
   border: none;
   background-color: #282c34;
-  /*height: calc(100vh - 80px);*/
+  min-height: calc(100vh - 80px);
   padding-top: 50px;
   padding-top: 30px;
 }
