--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,13 @@
   flex-direction: column;
   align-content: space-between;
 }
+
+.form-flex {
+  display: flex;
+  flex-direction: row;
+}
+.form-button {
+  flex-direction: row;
+  margin: auto;
+  padding-top: 20px;
+}
